# CPP-Linear-Algebra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imageMat.h
include/: CMakeLists.txt  imageMat.h  imageVec.h  vector_exception.h
lib/: CMakeLists.txt  imageMat.cpp  imageMat.h  imageVec.h
src/: fast_math.cpp  imageMat.h  vector_exception.cpp
tests/: CMakeLists.txt  matrix_test.cpp  vector_tests.cpp
