add_library(imageMat_lib INTERFACE)
target_include_directories(imageMat_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
add_library(imageVec_lib INTERFACE)
target_include_directories(imageVec_lib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
add_library(vector_exception_lib ../src/vector_exception.cpp)
target_include_directories(vector_exception_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})